# ehr-sequencing

./: .gitignore  404.html  INSTALL.md  README.md  README_DOCS.md  environment-cpu.yml  environment-cuda.yml  environment-macos.yml  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml
INSTALL/: index.html
checkpoints/: training_history.json
data_generation/: index.html
data_generation/data_generation_guide/: index.html
data_generation/synthea_csv_export_troubleshooting/: index.html
datasets/: index.html
datasets/SYNTHEA_SETUP/: index.html
dev/documentation/: ehrseq-docs-dev1.md  ehrseq-mkdocs-mathjax-dev1.md  ehrseq-mkdocs-mathjax-dev2.md  mkdocs_mathjax_setup_guide.md  mkdocs_quick_reference.md  mkdocs_troubleshooting_2026.md
dev/git/: ehrseq-git-push-1.md  ehrseq-git-push-2-BEHRT.md
dev/installation/: environment-guide.md  local-setup.md  pretrained-models.md  runpod-setup.md
dev/methods/: lstm_cell_vs_hidden_state_clarification.md  lstm_deep_dive.md  temporal_med2vec_explained.md  temporal_med2vec_qa.md  visit_grouped_progression_model_explained.md
dev/models/: attention_mechanism_clarification.md  broadcasting_and_weighted_sum_explained.md  lstm_baseline_explained.md  within_visit_structure_analysis.md
dev/sessions/: 2026-01-19-project-setup-and-planning.md  2026-01-20-data-pipeline-implementation.md  2026-01-20-lstm-baseline-implementation.md  2026-01-20-testing-setup-and-ssl-fixes.md  2026-01-24_survival_analysis_implementation.md  README.md
dev/testing/: COMMON_ERRORS.md  INSTALLATION_FIX.md  README.md
dev/tutorials/: einsum.md
dev/workflow/: MODEL_TRAINING_PLAN.md  MULTI_PROJECT_ENVIRONMENTS.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_KICKOFF.md  PROJECT_SETUP.md  ROADMAP.md  TESTING_WORKFLOW.md
docs/: INSTALL.md  index.md  pretrained_embeddings_guide.md  runpods_training_guide.md
docs/data_generation/: README.md  data_generation_guide.md  synthea_csv_export_troubleshooting.md
docs/datasets/: README.md  SYNTHEA_SETUP.md
docs/implementation/: resource-aware-models.md  visit-grouped-sequences.md
docs/methods/: README.md  (+7 more)
examples/: train_lstm_baseline.py  train_survival_lstm.py
legacy/: README.md  backup.sh  set_env.sh  set_env_template.sh
methods/: index.html
notebooks/: README.md  index.html
pretrained_embeddings_guide/: index.html
runpods.example/: IDE_JUPYTER_SETUP.md  LOCAL_DEVELOPMENT_WORKFLOW.md  POD_ENVIRONMENT_SETUP.md  README.md  README.md.bak  environment-runpods-minimal.yml
runpods_training_guide/: index.html
search/: search_index.json
tests/: README.md  __init__.py  test_data_pipeline.py  test_lstm_model.py
(+124 files in other folders)
